<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a50067.huanhuan.View.SettingActivity">
    <include layout="@layout/toolbar_layout"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:gravity="center">

    <com.example.a50067.huanhuan.Utility.CircleImageView
        android:id="@+id/settingAC_userIcon"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_weight="1"
        android:src="@mipmap/personnal_default_icon"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/settingAC_cameraAddImageBtn"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_camera"
            android:background="@drawable/button_shape"/>
        <Button
            android:id="@+id/settingAC_photoAddImageBtn"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/choose_from_album"
            android:background="@drawable/button_shape" />
    </LinearLayout>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <EditText
                android:id="@+id/settingAC_userTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settingAC_tel"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/settingAC_userAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settingAC_address"
                android:inputType="textPhonetic"
                android:maxLength="20"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/settingAC_saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/settingAC_save"
        android:textColor="#ffffff"
        android:textSize="18sp"/>
</LinearLayout>
